# ai-models-navgem

./: CITATION.cff  README.md  dl.py  pyproject.toml
src/ai_models_gfs/: __main__.py  model.py
src/ai_models_navgem/: __main__.py  model.py
src/ai_models_navgem/inputs/: __init__.py  file.py  navgem.py  opendata.py
src/ai_models_navgem/outputs/: __init__.py  grib2nc.py
src/ai_models_navgem/remote/: config.py
