#!/usr/bin/env python
# (C) Copyright 2024 ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]

[project]
description = "A package to run AI weather models."
name = "ai-models-navgem"
version = "0.0.21"
license = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
    { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]

maintainers = [
    { name = "Jacob Radford", email = "jacob.t.radford@gmail.com" }
]

keywords = ["tools", "ai"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]

dependencies = [
    "cdsapi",
    "earthkit-data>=0.11.3",
    "earthkit-meteo",
    "earthkit-regrid",
    "eccodes>=2.37",
    "ecmwf-api-client",
    "ecmwf-opendata",
    "entrypoints",
    "gputil",
    "multiurl",
    "numpy<2",
    "pyyaml",
    "requests",
    "tqdm",
]


[project.urls]
Homepage = "https://github.com/ecmwf-lab/ai-models"
Repository = "https://github.com/jacob-t-radford/ai-models-navgem"
Issues = "https://github.com/jacob-t-radford/ai-models-navgem/issues"

[project.scripts]
ai-models-navgem = "ai_models_navgem.__main__:main"

[project.entry-points."ai_models_navgem.input"]
file = "ai_models_navgem.inputs.file:FileInput"
mars = "ai_models_navgem.inputs.mars:MarsInput"
cds = "ai_models_navgem.inputs.cds:CdsInput"
gfs = "ai_models_navgem.inputs.gfs:GfsInput"
gefs = "ai_models_navgem.inputs.gfs:GefsInput"
gdas = "ai_models_navgem.inputs.gfs:GdasInput"
navgem = "ai_models_navgem.inputs.navgem:NavgemInput"
ecmwf-open-data = "ai_models_navgem.inputs.opendata:OpenDataInput"
opendata = "ai_models_navgem.inputs.opendata:OpenDataInput"

[project.entry-points."ai_models_navgem.output"]
file = "ai_models_navgem.outputs:FileOutput"
none = "ai_models_navgem.outputs:NoneOutput"

[tool.setuptools_scm]
write_to = "src/ai_models_navgem/_version.py"
